--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
 				</div>
 			</div>
 		</section>
-		<section>
+		<section class="pt-0">
 			<div class="container">
 				<div class="row align-items-center gy-5">
 					<div class="col-lg-6 order-lg-1 order-1">
