--- a/service.html
+++ b/service.html
@@ -480,7 +480,7 @@
 				</div>
 			</div>
 		</section>
-		<section>
+		<section class="pt-0">
 			<div class="container">
 				<div class="row d-lg-flex justify-content-center align-items-center">
 					<div class="col-12 col-lg-10">
