--- a/about.html
+++ b/about.html
@@ -558,11 +558,11 @@
 					<div class="col-lg-6">
 						<form class="form">
 							<div class="form-group">
-								<input type="text" id="fname2" name="fname" required placeholder="">
+								<input type="text" id="fname2" name="fname" required placeholder="Ваше имя">
 								<label for="fname2">Ваше имя</label>
 							</div>
 							<div class="form-group">
-								<input type="text" id="phone2" name="phone" required placeholder="">
+								<input type="text" id="phone2" name="phone" required placeholder="Номер телефона">
 								<label for="phone2">Номер телефона</label>
 							</div>
 							<div
@@ -722,11 +722,11 @@
 					<div class="col-lg-6">
 						<form class="form">
 							<div class="form-group">
-								<input type="text" id="fname3" name="fname" required placeholder="">
+								<input type="text" id="fname3" name="fname" required placeholder="Ваше имя">
 								<label for="fname3">Ваше имя</label>
 							</div>
 							<div class="form-group">
-								<input type="text" id="phone3" name="phone" required placeholder="">
+								<input type="text" id="phone3" name="phone" required placeholder="Номер телефона">
 								<label for="phone3">Номер телефона</label>
 							</div>
 							<div
@@ -744,7 +744,7 @@
 			<div class="container">
 				<div class="row gy-5">
 					<div class="col-lg-12">
-						<div class="row gy-5">
+						<div class="row gy-4">
 							<div class="col-12 col-lg">
 								<div class="f_widget d-flex flex-column justify-content-between ">
 									<div class="d-flex d-lg-block align-items-center ">
@@ -826,12 +826,12 @@
 					</div>
 					<form class="form popup-form">
 						<div class="form-group">
-							<input type="text" id="name-p" name="fname" required placeholder="">
+							<input type="text" id="name-p" name="fname" required placeholder="Ваше имя">
 							<label for="name-p">Ваше имя</label>
 						</div>
 						<div class="form-group">
 							<input type="text" name="phone" placeholder="Телефон" id="phone-p" class="phone" required="">
-							<label for="phone-p">Ваше имя</label>
+							<label for="phone-p">Телефон</label>
 						</div>
 							<p>Нажимая кнопку, вы соглашаетесь с политикой обработки персональных данных</p>
 							<button class="btn">Связаться с нами</button>
