--- a/faq.html
+++ b/faq.html
@@ -215,7 +215,7 @@
 		</div>
 		<footer>
 			<div class="container">
-				<div class="row gy-5">
+				<div class="row gy-4">
 					<div class="col-lg-12">
 						<div class="row gy-5">
 							<div class="col-12 col-lg">
@@ -299,12 +299,12 @@
 					</div>
 					<form class="form popup-form">
 						<div class="form-group">
-							<input type="text" id="name-p" name="fname" required placeholder="">
+							<input type="text" id="name-p" name="fname" required placeholder="Ваше имя">
 							<label for="name-p">Ваше имя</label>
 						</div>
 						<div class="form-group">
 							<input type="text" name="phone" placeholder="Телефон" id="phone-p" class="phone" required="">
-							<label for="phone-p">Ваше имя</label>
+							<label for="phone-p">Телефон</label>
 						</div>
 							<p>Нажимая кнопку, вы соглашаетесь с политикой обработки персональных данных</p>
 							<button class="btn">Связаться с нами</button>
