--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<!-- <base href="/"> -->
 
-	<title>Simple Starter</title>
+	<title>Гранекс</title>
 	<meta name="description" content="Simple Starter Description">
 
 	<meta name="viewport"
@@ -34,7 +34,7 @@
 
 	<main>
 		<header>
-			<div class="container">
+			<div class="container header-inner">
 				<div class="row">
 					<div class="col-12">
 						<div class="h_widgets d-flex align-items-center">
@@ -522,11 +522,11 @@
 					<div class="col-lg-6">
 						<form class="form">
 							<div class="form-group">
-								<input type="text" id="fname" name="fname" required placeholder="">
+								<input type="text" id="fname" name="fname" required placeholder="Ваше имя">
 								<label for="fname">Ваше имя</label>
 							</div>
 							<div class="form-group">
-								<input type="text" id="phone" name="phone" required placeholder="">
+								<input type="text" id="phone" name="phone" required placeholder="Номер телефона">
 								<label for="phone">Номер телефона</label>
 							</div>
 							<div
@@ -628,11 +628,11 @@
 								<p>Оставляйте заявку и наш специалист перезвонит вам!</p>
 							</div>
 							<div class="form-group">
-								<input type="text" name="fname" id="fname2" required placeholder="">
+								<input type="text" name="fname" id="fname2" required placeholder="Ваше имя">
 								<label for="fname2">Ваше имя</label>
 							</div>
 							<div class="form-group">
-								<input type="text" class="phone" name="phone" id="phone2" required placeholder="">
+								<input type="text" class="phone" name="phone" id="phone2" required placeholder="Номер телефона">
 								<label for="phone2">Номер телефона</label>
 							</div>
 							<div
@@ -993,11 +993,11 @@
 					<div class="col-lg-6">
 						<form class="form">
 							<div class="form-group">
-								<input type="text" id="fname3" name="fname" required placeholder="">
+								<input type="text" id="fname3" name="fname" required placeholder="Ваше имя">
 								<label for="fname3">Ваше имя</label>
 							</div>
 							<div class="form-group">
-								<input type="text" id="phone3" name="phone" required placeholder="">
+								<input type="text" id="phone3" name="phone" required placeholder="Номер телефона">
 								<label for="phone3">Номер телефона</label>
 							</div>
 							<div
@@ -1013,7 +1013,7 @@
 		</section>
 		<footer>
 			<div class="container">
-				<div class="row gy-5">
+				<div class="row gy-4">
 					<div class="col-lg-12">
 						<div class="row gy-5">
 							<div class="col-12 col-lg">
@@ -1097,12 +1097,12 @@
 					</div>
 					<form class="form popup-form">
 						<div class="form-group">
-							<input type="text" id="name-p" name="fname" required placeholder="">
+							<input type="text" id="name-p" name="fname" required placeholder="Ваше имя">
 							<label for="name-p">Ваше имя</label>
 						</div>
 						<div class="form-group">
-							<input type="text" name="phone" placeholder="Телефон" id="phone-p" class="phone" required="">
-							<label for="phone-p">Ваше имя</label>
+							<input type="text" name="phone" placeholder="Телефон" id="phone-p" class="phone" required="Номер телефона">
+							<label for="phone-p">Номер телефона</label>
 						</div>
 							<p>Нажимая кнопку, вы соглашаетесь с политикой обработки персональных данных</p>
 							<button class="btn">Связаться с нами</button>
