--- a/product.html
+++ b/product.html
@@ -353,11 +353,11 @@
 					<div class="col-lg-6">
 						<form class="form">
 							<div class="form-group">
-								<input type="text" id="fname" name="fname" required placeholder="">
+								<input type="text" id="fname" name="fname" required placeholder="Ваше имя">
 								<label for="fname">Ваше имя</label>
 							</div>
 							<div class="form-group">
-								<input type="text" id="phone" name="phone" required placeholder="">
+								<input type="text" id="phone" name="phone" required placeholder="Номер телефона">
 								<label for="phone">Номер телефона</label>
 							</div>
 							<div
@@ -438,11 +438,11 @@
 								<p>Оставляйте заявку и наш специалист перезвонит вам!</p>
 							</div>
 							<div class="form-group">
-								<input type="text" name="fname" id="fname2" required placeholder="">
+								<input type="text" name="fname" id="fname2" required placeholder="Ваше имя">
 								<label for="fname2">Ваше имя</label>
 							</div>
 							<div class="form-group">
-								<input type="text" class="phone" name="phone" id="phone2" required placeholder="">
+								<input type="text" class="phone" name="phone" id="phone2" required placeholder="Номер телефона">
 								<label for="phone2">Номер телефона</label>
 							</div>
 							<div
@@ -754,11 +754,11 @@
 					<div class="col-lg-6">
 						<form class="form">
 							<div class="form-group">
-								<input type="text" id="fname3" name="fname" required placeholder="">
+								<input type="text" id="fname3" name="fname" required placeholder="Ваше имя">
 								<label for="fname3">Ваше имя</label>
 							</div>
 							<div class="form-group">
-								<input type="text" id="phone3" name="phone" required placeholder="">
+								<input type="text" id="phone3" name="phone" required placeholder="Номер телефона">
 								<label for="phone3">Номер телефона</label>
 							</div>
 							<div
@@ -774,7 +774,7 @@
 		</section>
 		<footer>
 			<div class="container">
-				<div class="row gy-5">
+				<div class="row gy-4">
 					<div class="col-lg-12">
 						<div class="row gy-5">
 							<div class="col-12 col-lg">
@@ -858,12 +858,12 @@
 					</div>
 					<form class="form popup-form">
 						<div class="form-group">
-							<input type="text" id="name-p" name="fname" required placeholder="">
+							<input type="text" id="name-p" name="fname" required placeholder="Ваше имя">
 							<label for="name-p">Ваше имя</label>
 						</div>
 						<div class="form-group">
 							<input type="text" name="phone" placeholder="Телефон" id="phone-p" class="phone" required="">
-							<label for="phone-p">Ваше имя</label>
+							<label for="phone-p">Телефон</label>
 						</div>
 							<p>Нажимая кнопку, вы соглашаетесь с политикой обработки персональных данных</p>
 							<button class="btn">Связаться с нами</button>
