--- a/services.html
+++ b/services.html
@@ -34,7 +34,7 @@
 
 	<main>
 		<header>
-			<div class="container">
+			<div class="container header-inner">
 				<div class="row">
 					<div class="col-12">
 						<div class="h_widgets d-flex align-items-center">
